--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
+    "timeago.js": "^4.0.0-beta.3",
     "web-vitals": "^2.1.4",
     "ws": "^8.13.0"
   },
